syntax = "proto3";

package pb;

option go_package = "simplebank/pb";

message LoginRequest {
    string name = 1;
    string password = 2;
}

message LoginResponse {
    int32 id = 1;
    string token = 2;
}
