syntax = "proto3";

package pb;

import "rpc_signup.proto";
import "rpc_login.proto";

option go_package = "simplebank/pb";

service simpleBank {
    rpc SignUp (SignUpUserRequest) returns (SignUpUserResponse) {}
    rpc Login (LoginRequest) returns (LoginResponse) {}
}
